# django-snacks

./: README.md  pyproject.toml
django_snacks/snacks_project/snacks/: tests.py  urls.py
django_snacks/snacks_project/snacks_project/: settings.py
django_snacks/snacks_project/templates/: about.html  base.html  home.html
